[gd_scene load_steps=25 format=2]

[ext_resource path="res://Art/Menus/exit.png" type="Texture" id=1]
[ext_resource path="res://Art/Menus/confirm.png" type="Texture" id=2]
[ext_resource path="res://Art/Menus/flower_outline.png" type="Texture" id=3]
[ext_resource path="res://Art/Menus/mute.png" type="Texture" id=4]
[ext_resource path="res://Art/Menus/sound.png" type="Texture" id=5]
[ext_resource path="res://Art/Menus/SettingsBackground2.png" type="Texture" id=6]
[ext_resource path="res://Art/Menus/SettingsBackground.png" type="Texture" id=7]
[ext_resource path="res://Art/Menus/skull.png" type="Texture" id=8]
[ext_resource path="res://SettingsMenu.gd" type="Script" id=9]
[ext_resource path="res://Art/Menus/circle_outline.png" type="Texture" id=10]
[ext_resource path="res://Art/Menus/flower.png" type="Texture" id=11]
[ext_resource path="res://Art/Menus/skull_outline.png" type="Texture" id=12]
[ext_resource path="res://Art/Menus/speed.png" type="Texture" id=13]
[ext_resource path="res://Art/Menus/swipe.png" type="Texture" id=14]
[ext_resource path="res://Art/Menus/slider.png" type="Texture" id=15]
[ext_resource path="res://Art/Menus/slider_highlight.png" type="Texture" id=16]
[ext_resource path="res://Art/Menus/grabber.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 399, 27 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 399, 27 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 399, 27 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 399, 27 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 399, 27 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 399, 27 )

[node name="SettingsMenu" type="AnimatedSprite"]
position = Vector2( 0.529755, 0.529724 )
frames = SubResource( 1 )
script = ExtResource( 9 )

[node name="Cancel" type="TouchScreenButton" parent="."]
position = Vector2( -256, -380 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 1 )

[node name="Confirm" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 155, -380 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )

[node name="Mute" type="TouchScreenButton" parent="."]
position = Vector2( -140, -200 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 4 )

[node name="Outline" type="Sprite" parent="Mute"]
visible = false
position = Vector2( 250, 250 )
texture = ExtResource( 10 )

[node name="Sound" type="TouchScreenButton" parent="."]
position = Vector2( -275, -200 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 5 )

[node name="Outline" type="Sprite" parent="Sound"]
visible = false
position = Vector2( 250, 250 )
texture = ExtResource( 10 )

[node name="Invincible" type="TouchScreenButton" parent="."]
position = Vector2( 50, -195 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 11 )

[node name="Outline" type="Sprite" parent="Invincible"]
visible = false
position = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="Death" type="TouchScreenButton" parent="."]
position = Vector2( 185, -195 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 8 )

[node name="Outline" type="Sprite" parent="Death"]
visible = false
position = Vector2( 32, 32 )
texture = ExtResource( 12 )

[node name="Speed" type="HSlider" parent="."]
margin_left = -125.0
margin_top = -36.0
margin_right = 274.0
margin_bottom = 162.0
custom_icons/grabber_highlight = ExtResource( 17 )
custom_icons/grabber = ExtResource( 17 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = 15.0
max_value = 115.0
value = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="Speed"]
position = Vector2( -95, 95 )
texture = ExtResource( 13 )

[node name="Swipe" type="HSlider" parent="."]
margin_left = -125.0
margin_top = 175.311
margin_right = 250.0
margin_bottom = 375.311
custom_icons/grabber_highlight = ExtResource( 17 )
custom_icons/grabber = ExtResource( 17 )
custom_styles/slider = SubResource( 5 )
custom_styles/grabber_area_highlight = SubResource( 6 )
custom_styles/grabber_area = SubResource( 7 )
min_value = 2.0
max_value = 50.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="Swipe"]
position = Vector2( -95, 95 )
texture = ExtResource( 14 )
[connection signal="released" from="Cancel" to="." method="_on_Cancel_released"]
[connection signal="released" from="Confirm" to="." method="_on_Confirm_released"]
[connection signal="released" from="Mute" to="." method="_on_Mute_released"]
[connection signal="released" from="Sound" to="." method="_on_Sound_released"]
[connection signal="released" from="Invincible" to="." method="_on_Invincible_released"]
[connection signal="released" from="Death" to="." method="_on_Death_released"]
[connection signal="value_changed" from="Speed" to="." method="_on_Speed_value_changed"]
[connection signal="value_changed" from="Swipe" to="." method="_on_Swipe_value_changed"]
